anaDig: formulas up

--- a/sems/sem4/analog-and-digital-communication/notes/formulas/formulas.tex
+++ b/sems/sem4/analog-and-digital-communication/notes/formulas/formulas.tex
@@ -28,6 +28,24 @@ Topic 3:
 	\1 $m_t = \sqrt{ ( \sum m_n^2 ) }$
 \end{outline}
 
+Topic 4:
+
+\begin{outline}
+	\1 $\Delta f = k_f \cdot V_{i(\max)}$
+	\1 $f_{out} = f_c + \Delta f$
+	\1 $m_p = k_p \cdot V_{i(\max)}$
+	\1 Analog Modulation
+	\2 Amplitude Modulation (DSB-FC)
+	\3 $V_{AM(t)} = E_c \sin \omega_c t + \frac{m E_c}{2} \cos [ (\omega_c - \omega_i) t ] = \frac{m E_c}{2} \cos [ (\omega_c - \omega_i) t ]$
+	\3 $P_{total} = \frac{E_c^2}{2R} \cdot \left( 1 + \frac{m^2}{2}\right)$
+	\3 $BW = 2\cdot f_i$
+	\3 FM
+	\4 $V_{AM(t)} = E_c \sin ( \omega_c t + m_f \sin \omega_i t )$
+	\4 $m_f = \frac{\Delta f}{f_i} = \frac{k_f \cdot V_{i(\max)}}{f_i}$
+	\2 Angle Modulation
+	\3 $P_{total} = $
+\end{outline}
+
 % Math
 
 \begin{outline}
