appElec: formulas up and gitignore add

--- a/sems/sem4/applied-electromagnetics/formulas/tex/formulas.tex
+++ b/sems/sem4/applied-electromagnetics/formulas/tex/formulas.tex
@@ -5,6 +5,15 @@
 
 \begin{document}
 
+L1
+
+\begin{outline}
+	\1 $P \propto \frac{1}{f}$
+	\1 Euler's Identity: $e^{\pm j\theta} = \cos \theta \pm j\sin\theta$
+\end{outline}
+
+Misc
+
 \begin{outline}
 	\1 $c = f\lambda$
 	\1 $t' = \frac{l}{c}$, derived from v = m/s
